--- a/content/css/popup.less
+++ b/content/css/popup.less
@@ -3,21 +3,24 @@ body {
 	margin: 0px;
 	padding: 0px;
 	background: white;
-}
-
-div {
+	width: 200px;
+	height: 200px;
 	text-align: center;
-	padding: 1px 3px;
-	width: 100px;
-	margin-top:1px;
-	background: #cccccc;
 }
 
-div:hover {
-	background: #aaaaaa;
+.options {
+	background-color:#f9f9f9;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	color:#666666;
+	margin: 5px auto;
+	padding: 5px;
+	width: 145px;
 }
-
-#option {
-	border: 1px solid white;
-	padding: 3px;
+.options:hover {
+	background-color:#e9e9e9;
+}
+.options:active {
+	position:relative;
+	top:1px;
 }
