Add button pops up add user dialog (non-functional)

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -17,6 +17,10 @@
     flex-direction: row;
 }
 
+.ui-state-default .ui-icon {
+    background-image: url("images/ui-icons_222222_256x240.png");
+}
+
 #screenshot {
     display: block;
     margin: auto;
