Fix broken icon. Add button properly updates info elements.

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -18,7 +18,7 @@
 }
 
 .ui-state-default .ui-icon {
-    background-image: url("images/ui-icons_222222_256x240.png");
+    background-image: url("../images/ui-icons_222222_256x240.png");
 }
 
 #screenshot {
