Add crop functionality in Chrome

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -39,8 +39,12 @@
     margin-left: 5px;
 }
 
-#send-section {
+#end-section {
     margin-right: 5px;
+}
+
+#end-section button {
+	margin-right: 5px;
 }
 
 button {
