User dialog box is above the crop elements.

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -31,8 +31,13 @@
     padding-top: 30px;
 }
 
+.ui-dialog {
+	z-index: 91;
+}
+
 .jcrop-holder {
 	margin: 30px auto auto auto;
+	z-index: 90;
 }
 
 #new-user-section {
