Add loading GIF for AJAX

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -25,10 +25,22 @@
     background-image: url("../images/ui-icons_222222_256x240.png");
 }
 
+#loading-div {
+    width: 100%;
+    display: none;
+}
+
+#loading {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+
 #screenshot {
     display: block;
     margin: auto;
-    padding-top: 30px;
+    padding-top: 25px;
 }
 
 .ui-dialog {
