Convert .less file tab to 2 spaces instead of 4

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -1,78 +1,77 @@
 #options-section {
-    background-color: gainsboro;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    line-height: 25px;
-    padding: 5px 0px;
-    width: 100%;
+  background-color: gainsboro;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  line-height: 25px;
+  padding: 5px 0px;
+  width: 100%;
 }
 
 .option-title {
-    padding-right: 5px;
+  padding-right: 5px;
 }
 
 #canvas {
-    display: none;
+  display: none;
 }
 
 #user-section {
-    display: flex;
-    flex-direction: row;
+  display: inline-block;
 }
 
 .ui-state-default .ui-icon {
-    background-image: url("../images/ui-icons_222222_256x240.png");
+  background-image: url("../images/ui-icons_222222_256x240.png");
 }
 
 #loading-div {
-    width: 100%;
-    display: none;
+  display: none;
+  width: 100%;
 }
 
 #loading {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
 }
 
 #screenshot {
-    display: block;
-    margin: auto;
-    padding-top: 25px;
+  display: block;
+  margin: auto;
+  padding-top: 25px;
 }
 
 .ui-dialog {
-    z-index: 91;
+  z-index: 91;
 }
 
 .jcrop-holder {
-    margin: 30px auto auto auto;
-    z-index: 90;
+  margin: 30px auto auto auto;
+  z-index: 90;
 }
 
 #new-user-section {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 #end-section {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 #end-section button {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 button {
-    padding: 5px;
+  padding: 5px;
 }
 
 select {
-    margin-right: 30px;
-    padding-right: 5px;
+  margin-right: 30px;
+  padding-right: 5px;
 }
 
 body {
-    margin: 0px;
+  margin: 0px;
 }
