Replace loading image with Font Awesome icon. Set buttons to have jquery UI style.

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -26,13 +26,11 @@
 
 #loading-div {
   display: none;
+  text-align: center;
   width: 100%;
 }
 
 #loading {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 5px;
 }
 
