Fix sizing issue in FF. Fix server not being added when userInfo emtpy

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -18,11 +18,9 @@
 }
 #account-select-button {
   vertical-align: middle;
-  width: 25% !important;
 }
 #rr-select-button {
   vertical-align: middle;
-  width: 50% !important;
 }
 #loading-div {
   display: none;
@@ -66,5 +64,6 @@ select {
   padding-right: 5px;
 }
 body {
+  font-size: 0.75em;
   margin: 0px;
 }
