Add border to menubar area on screenshot page

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -1,5 +1,6 @@
 #options-section {
   background-color: gainsboro;
+  border-bottom: 2px solid #D2D2D2;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
