--- a/content/css/popup.less
+++ b/content/css/popup.less
@@ -1,26 +1,44 @@
-body {
-  overflow: hidden;
-  margin: 0px;
-  padding: 0px;
-  background: white;
-  width: 200px;
-  height: 200px;
+/*
+ * The size of the container needs to be manually set for Firefox in the
+ * "xpi/index.js" file.
+ */
+
+#container {
+  background: #FFFFFF;
+  height: 100%;
+  width: 100%;
   text-align: center;
 }
+
+/****************************************************************************
+ * Title Section
+ ****************************************************************************/
+
+#logo {
+  float: left;
+}
+
+#title {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+/****************************************************************************
+ * Navigation Section
+ ****************************************************************************/
 
 .options {
   background-color: #f9f9f9;
   border: 1px solid #dcdcdc;
-  display: inline-block;
   color: #666666;
+  display: inline-block;
+  font-family: "FontAwesome";
+  font-size: 12px;
   margin: 5px auto;
   padding: 5px;
   width: 145px;
 }
+
 .options:hover {
   background-color: #e9e9e9;
-}
-.options:active {
-  position: relative;
-  top: 1px;
 }
