--- a/content/css/users.less
+++ b/content/css/users.less
@@ -3,6 +3,15 @@ body {
   font-size: 0.75em;
   text-align: center;
 }
+
+/****************************************************************************
+ * Table
+ ****************************************************************************/
+
+#table-div {
+  display: inline-block;
+}
+
 table {
   border-collapse: collapse;
   text-align: left;
@@ -36,6 +45,10 @@ tfoot tr td {
   border-bottom: 2px solid black;
 }
 
+/****************************************************************************
+ * Save Button
+ ****************************************************************************/
+
 button {
   display: block !important;
   margin: 10px auto !important;
@@ -43,12 +56,4 @@ button {
 
 #add {
   padding-left: 60px;
-}
-
-#user-select {
-  list-style-type: none;
-}
-
-#table-div {
-  display: inline-block;
 }
