Fix background color in Firefox popup

--- a/content/css/popup.less
+++ b/content/css/popup.less
@@ -3,8 +3,11 @@
  * "xpi/index.js" file.
  */
 
-#container {
+body {
   background: #FFFFFF;
+}
+
+#container {
   height: 100%;
   width: 100%;
   text-align: center;
