--- a/content/css/jcrop-rb-style.css
+++ b/content/css/jcrop-rb-style.css
@@ -1,12 +1,39 @@
+/****************************************************************************
+ * JCrop Section
+ ****************************************************************************/
+
 .jcrop-holder {
 	left: 0px;
 	position: absolute !important;
 	top: 0px;
-	z-index: 99;
+	z-index: 999;
 }
 
 #crop-button-container {
 	margin-top: 10px;
 	position: absolute;
-	z-index: 100;
+	z-index: 1000;
+}
+
+/****************************************************************************
+ * Crop Button Container
+ ****************************************************************************/
+
+#crop-button-container {
+	background-color: #FFFFFF;
+	border: 1px solid black;
+	max-height: 51px;
+	position: absolute;
+}
+
+#crop-button-container .crop-container-button {
+	display: inline-block;
+	margin: 3px;
+}
+
+#crop-button-container .vertical-divider {
+	border-left: 1px solid #38546d;
+	border-right: 1px solid #16222c;
+	display: inline-block;
+	height: 51px;
 }
