[Firefox] Area delete button calls destroy() and intro message added

--- a/content/css/jcrop-rb-style.css
+++ b/content/css/jcrop-rb-style.css
@@ -16,6 +16,19 @@
 }
 
 /****************************************************************************
+ * Introduction Message
+ ****************************************************************************/
+
+#intro-wrapper {
+	background-color: white;
+	padding: 5px;
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	z-index: 9999;
+}
+
+/****************************************************************************
  * Crop Button Container
  ****************************************************************************/
 
